playbooks/iptables/iptables
# Generated by iptables-save v1.4.21 on Mon Mar 26 15:35:27 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [580:54475]
:RH-Firewall-1 - [0:0]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A FORWARD -j RH-Firewall-1-INPUT
-A RH-Firewall-1-INPUT -p tcp -m multiport --dports 43 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m multiport --dports 4343 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m multiport --dports 43 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m multiport --dports 4343 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m multiport --dports 631 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m multiport --dports 631 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m multiport --dports 123 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m multiport --dports 161 -j ACCEPT
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m multiport --dports 22 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m multiport --dports 873 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m multiport --dports 5666 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m multiport --dports 1521,3872 -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp -j ACCEPT
-A RH-Firewall-1-INPUT -m limit --limit 10/min -j LOG --log-prefix "iptables: [RH-Firewall-1-INPU"
-A RH-Firewall-1-INPUT -j ACCEPT
-A RH-Firewall-1-INPUT -p esp -j ACCEPT
-A RH-Firewall-1-INPUT -p ah -j ACCEPT
-A RH-Firewall-1-INPUT -d 224.0.0.251/32 -p udp -m multiport --dports 5353 -j ACCEPT
-A RH-Firewall-1-INPUT -d 10.6.100.10/32 -p udp -m multiport --dports 5666 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp -m multiport --dports 25 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m multiport --dports 25 -j ACCEPT
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-port-unreachable
-A RH-Firewall-1-INPUT -m state --state INVALID -j DROP
COMMIT
# Completed on Mon Mar 26 15:35:27 2018
